<resources>
    <string name="app_name">Cookbook</string>

    <string name="detail_button"> Show recipe </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cocktail_name"> Name of product </string>
    <string name="cocktail_recipe"> Składniki i sposób przygotowania </string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="accept">Accept</string>
    <string name="text_description">Input time | GG:MM:SS</string>
    <string name="action_activity_title">About application</string>
    <string name="action_title">Action_Activity</string>
    <string name="action_share">Share</string>
    <string name="title_top">Fragment główny</string>

    <string-array name="kategoria1">
        <item>First Position Category 1</item>
        <item>Second Position Category 1 </item>
        <item>Third Position Category 1 </item>
    </string-array>
    <string-array name="kategoria2">
        <item>Kat. 2 Pozycja 1</item>
        <item>Kat. 2 Pozycja 2</item>
        <item>Kat. 2 Pozycja 3 </item>
    </string-array>

    <string name="home_tab">Start</string>
    <string name="kat1_tab">Cocktails</string>
    <string name="kat2_tab">Cakes</string>

    <string name="top_header">Welcome to our cookbook app!</string>
    <string name="top_image">Nice picture</string>
    <string name="top_text">Welcome to our cocktail crafting application, where you will find a comprehensive guide to creating delicious and unique cocktails
        perfect for any occasion. Our curated collection of recipes is designed to satisfy all taste preferences, including classic favorites, modern twists,
        and everything in between.
        Each recipe is meticulously crafted by our experts with easy-to-follow instructions
        and stunning images to help you create impressive cocktails effortlessly.
        Whether you are a seasoned mixologist or a novice, our app caters to all levels of expertise.
        So, lets get mixing and raise a toast to discovering your new favorite cocktail recipe. Cheers!</string>

    <string name="user_name"> Maksim Likhaivanenka </string>
    <string name="user_mail"> maksim.likhaivanenka@android.com </string>
    <string name="drawer_import"> Import </string>
    <string name="drawer_gallery"> Gallery </string>
    <string name="drawer_slideshow"> Slideshow </string>
    <string name="drawer_tools"> Tools </string>
    <string name="drawer_tools_settings"> Settings </string>
    <string name="drawer_tools_help"> Help </string>

    <string name="nav_open_drawer">Open the navigation drawer</string>
    <string name="nav_close_drawer">Close the navigation drawer</string>
    <string name="your_text_goes_here">
        A cookbook application with cocktails and cakes is a great idea for anyone who loves baking and mixing drinks.
        This kind of application can offer a variety of recipes for cakes and cocktails, including traditional, modern, and creative options.

        Users can browse through recipes, save their favorites, and even create a shopping list for ingredients. The application can also include features like step-by-step instructions, cooking tips, and photos of finished dishes.

        With a cookbook application, users can discover new recipes, learn new cooking techniques, and improve their baking and cocktail-making skills.
        It is a great resource for anyone who wants to impress their guests or indulge in some delicious treats.</string>
</resources>