<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_import"
            android:icon="@drawable/photo_camera"
            android:title="@string/drawer_import"
         />

        <item
            android:id="@+id/drawer_gallery"
            android:icon="@drawable/gallery"
            android:title="@string/drawer_gallery"
           />

        <item
            android:id="@+id/drawer_slideshow"
            android:icon="@drawable/slideshow"
            android:title="@string/drawer_slideshow"
           />

        <item
            android:id="@+id/drawer_tools"
            android:icon="@drawable/bolt"
            android:title="@string/drawer_tools"
            />

    </group>

</menu>